copy fix for date

--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -734,7 +734,7 @@ en-GB:
     100m:
       logo: "YouVersion: The Bible app"
       tagline: "It starts with <em>100 million</em>"
-      intro: "Can the Bible App reach 100 million installs before our 5th anniversary on 10th July? Only with your help!"
+      intro: "Can the Bible App reach 100 million installs before our 5th anniversary on 10 July? Only with your help!"
       share:
         with friends: "Share with your friends"
         fb:
