--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -744,7 +744,7 @@ en:
     100m:
       logo:                                     "YouVersion: The Bible app"
       tagline:                                  "It starts with <em>100 million</em>"
-      intro:                                    "Can the Bible App reach 100 million installs before our 5th anniversary on July 10th? Only with your help!"
+      intro:                                    "Can the Bible App reach 100 million installs before our 5th anniversary on July 10? Only with your help!"
       share:
         with friends:                           "Share with your friends"
         fb:
