--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -1,4 +1,8 @@
 cy:
+  social:
+    email: "Ebost "
+    twitter: "Trydar"
+    facebook: "Gweplyfr"
   now: "Nawr "
   celebrating 50MM: "Yn dathlu Gosod yr App 50 Miliwn o weithiau ! "
   link: "Dolen"
