--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -1,4 +1,8 @@
 en-GB:
+  social:
+    email: "E-mail"
+    twitter: "Twitter"
+    facebook: "Facebook"
   api:
     users agree bool: "You must agree to the terms and conditions to create an account."
     users confirm password matches: "The new passwords do not match."
