--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -1,4 +1,8 @@
 ta:
+  social:
+    email: "மின்னஞ்சல்"
+    twitter: "Twitter"
+    facebook: "Facebook"
   now: "இப்பொழுது"
   celebrating 50MM: "50 மில்லியன் பயன்பாடு நிறுவல்களை கொண்டாடுகிறது!"
   link: "தொடர்பு "
