--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -1,4 +1,8 @@
 zh-TW:
+  social:
+    email: "電子郵件"
+    twitter: "Twitter"
+    facebook: "Facebook"
   api:
     users agree bool: "您必須同意使用條款與條件才能建立帳號。"
     users confirm password matches: "新密碼不匹配。"
@@ -16,6 +20,9 @@ zh-TW:
     users username or password invalid: "您提供的用戶名或密碼無效。"
     users username required: "您必須鍵入用戶名。"
   meta:
+    100million:
+      title: "從1億開始"
+      description: "聖經軟體的安裝量幾乎達到1億次，這真是一個不可思議的裡程碑！但是我們才剛剛開始。下載免費的聖經軟體，然后與朋友們分享這個軟體，讓我們一起開創歷史。"
     mobile:
       title: "聖經軟體"
       description: "數以千萬的人們透過聖經軟體來閱讀、看視訊、聽音訊或分享經文上帝的話語。請下載這個免費軟體然後隨時隨地存取您的書籤、筆記和讀經計劃。享受使用上百個聖經譯本，包括語音版，全部都在您的行動設備裡。"
@@ -280,6 +287,7 @@ zh-TW:
       information use title: "我們如何使用您的資訊？"
       information use text: "當您登入某個要求您註冊的服務時，我們會請您提供個人的資訊。如果 LifeChurch.tv 因有不同於當初收集此資訊的用途而希望改變使用這些資訊的方式時，我們將會在使用之前徵求您的同意。除非預先得到您的許可，我們絕不會在隱私權政策和 / 或特別服務通告裡所涵蓋的範圍以外收集或者使用敏感的資訊。您可以拒絕提交私人資訊給我們的服務，在這情況下 LifeChurch.tv  將不能給您提供這些相關的服務。"
       information security title: "我們如何保護您的資料？"
+      information security text: "未經您明確同意，我們不會與LifeChurch.tv以外的其他機構分享您的個人信息。隻有當我們有充分的理由相信，對這些信息的訪問，使用，保存或披露是合理的，並且是必要的時候，LifeChurch.tv才會分享您的個人信息。這包括（a）滿足任何適用的法律、法規、法律程序或者強制執行的政府要求，（b）執行適用的使用條款，包括調查潛在違規行為，（c）檢測、預防或解決欺詐、安全或技術問題，或（d）在法律的要求或允許下，防止即將發生的損害行為以保護LifeChurch.tv ，它的用戶或公眾的財產和安全。 LifeChurch.tv會採取必要的安全措施，以防止未經授權的訪問或未經授權的修改、披露或銷毀數據。包括審查我們內部的數據收集、存儲和處理慣例和安全措施，以及物理安全措施，以防止未經授權的訪問個人數據存儲系統。除非從您獲得明確許可，LifeChurch.tv會限制訪問個人信息，這包括雇員，承包商和那些需要知道這些信息來經營、開發和改善我們的服務的代理商。這些人都必須履行保密義務，否則會受到紀律處分，包括終止及刑事起訴。"
       data integrity title: "資料完整性"
       data integrity text: "LifeChurch.tv 審查我們所收集的數據、儲存和處理的慣例來確保我們只收集、儲存和處理用來提供或改進我們服務的個人資訊。我們採取合理的步驟以確保我們所處理的個人資料是正確、完整以及最新的，不過在任何有需要的時候，我們得依靠用戶們自己來更新或更正他們的個人資訊。"
       information access title: "存取和更新個人資訊"
@@ -729,6 +737,7 @@ zh-TW:
   campaigns:
     100m:
       logo: "YouVersion：聖經軟體"
+      tagline: "從<em>1億</em>開始"
       intro: "聖經軟體能否在7月10日5週年前達到一億個安裝的里程碑嗎？全靠您的幫助！"
       share:
         with friends: "和您的朋友分享"
@@ -742,6 +751,7 @@ zh-TW:
           body: "我很喜歡使用 YouVersion 的聖經軟體，我想您也會喜歡的。不管是閱讀、看視訊、聽音訊或分享經文，聖經軟體都很容易使用，因此現在我接觸聖經的次數也更多了。聖經軟體也包括了讀經計劃，每天備有一系列的精選經文供我閱讀。\n\n您可以從這裡把軟體下載和安裝 (免費的！) 到幾乎任何款式的行動設備上:\nhttp://www.bible.com/app"
       body:
         p1: "7月10號是個大日子。不單是聖經軟體的5週年，更是蘋果公司的iTunes Store誕生了5年了。"
+        p2: "還要更大？有了您的幫助，這將會是聖經軟體將達到1億次下載量的那一天。"
         p3: "我們知道到神利用好像這一個的里程碑去推動更大增長。"
         p4: "讓我們一同創造歷史。"
       ad:
