--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1,4 +1,8 @@
 cs:
+  social:
+    email: "E-mail"
+    twitter: "Twitter"
+    facebook: "Facebook"
   api:
     users agree bool: "Pro vytvoření účtu musíte souhlasit se všeobecnými podmínkami."
     users confirm password matches: "Zadaná nová hesla nesouhlasí."
@@ -741,7 +745,7 @@ cs:
           dialog name: "Máš už aplikaci Bible?"
           dialog desc: "Mám moc rád aplikaci Bible! Pomohla mi k tomu, aby se Bible stala každodenní součástí mého života. Můžu tam zvýraznit verše, poslechnout si audio Bible, udělat si poznámky, číst podle plánu... dokonce sledovat videa! Určitě si ji můžeš hned stáhnout (je zdarma): http://www.bible.com/app"
         tw:
-          tweet: "Aplikace Bible od @YouVersion má trvalé místo na mé hlavní obrazovce. Čtení, sledování, poslech a sdílení... vše v aplikaci, která je zdarma: bible.com/app"
+          tweet: "Bible od @YouVersion má stálé místo na mé hlavní obrazovce. Čtení, sledování, poslech a sdílení... a to vše ve free aplikaci: bible.com/app"
         em:
           subject: "Máš aplikaci Bible?"
           body: " Velice se mi líbí aplikace Bible od YouVersion a myslím si, že by se líbila i Tobě. Otevírám teď Bibli mnohem častěji, protože číst si ji, dívat se na videa, poslouchat ji a sdílet ji je velice jednoduché. Obsahuje dokonce i Plány, které mají vybrané pasáže Bible a čekají na přečtení každý den.\n\nMůžeš si ji také stáhnout (zdarma!) do téměř jakéhokoliv mobilního zařízení:\n http://www.bible.com/app"
